--- a/src/scss/__home.scss
+++ b/src/scss/__home.scss
@@ -356,5 +356,46 @@
         color: #ffffff;
       }
     }
+
+    #main-about {
+      padding: 30px;
+
+      h2 {
+        margin: 0 0 20px 0;
+        font-family: Montserrat Light, sans-serif;
+        font-weight: 300;
+        font-size: 30px;
+        font-style: normal;
+        line-height: 30px;
+        text-align: center;
+        text-transform: uppercase;
+        color: #000000;
+      }
+
+      p {
+        margin: 16px 0;
+        font-family: Montserrat Light, sans-serif;
+        font-weight: 300;
+        font-size: 16px;
+        line-height: 25px;
+        color: #7a7a7a;
+      }
+    }
+
+    #main-contacts {
+      padding: 100px 20px;
+      background-image: linear-gradient(45deg, #f2295b 0%, #ff9a68 100%);
+
+      h2 {
+        margin: 0;
+        font-family: Montserrat Light, sans-serif;
+        font-weight: 300;
+        font-size: 30px;
+        font-style: normal;
+        line-height: 36px;
+        text-align: center;
+        color: #ffffff;
+      }
+    }
   }
 }
