--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,11 @@
 }
 
 @font-face {
+  font-family: Roboto Light;
+  src: url(../fonts/Roboto-Light.ttf);
+}
+
+@font-face {
   font-family: Roboto Regular;
   src: url(../fonts/Roboto-Regular.ttf);
 }
