--- a/src/scss/__header.scss
+++ b/src/scss/__header.scss
@@ -13,7 +13,7 @@ header {
     justify-content: space-between;
     align-items: center;
 
-    > img {
+    img {
       max-width: 50%;
       height: 30px;
     }
@@ -109,7 +109,7 @@ header {
     #header-logo-wrap {
       width: auto;
 
-      > img {
+      img {
         width: 100px;
         max-width: none;
         height: 40px;
@@ -142,6 +142,24 @@ header {
 
       a:hover {
         color: #f02e5e;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  header {
+
+    #header-logo-wrap {
+      padding-left: 40px;
+      padding-right: 40px;
+    }
+
+    #nav-closed {
+      column-gap: 0;
+
+      a {
+        padding: 13px 20px;
       }
     }
   }
