--- a/src/scss/__home.scss
+++ b/src/scss/__home.scss
@@ -443,3 +443,100 @@ main {
     }
   }
 }
+
+@media screen and (min-width: 1024px) {
+  main {
+
+    #main-info-wrap {
+      justify-content: center;
+      column-gap: 40px;
+
+      #main-info-top {
+        position: relative;
+
+        #arrow {
+          display: block;
+          position: absolute;
+          bottom: 80px;
+          right: 10px;
+          width: 70px;
+          height: 50px;
+        }
+      }
+    }
+
+    #work-time {
+      padding-top: 200px;
+      padding-bottom: 200px;
+    }
+
+    #main-about {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      h2, p {
+        max-width: 800px;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1300px) {
+  main {
+
+    #main-info-wrap {
+
+      #main-info-top {
+        max-width: 500px;
+      }
+
+      #main-info-bottom {
+        max-width: 500px;
+      }
+    }
+
+    #we-buy {
+
+      #metal-types-wrap {
+
+        a {
+
+          h2 {
+            font-size: 40px;
+            line-height: 40px;
+          }
+          
+          img {
+            max-width: 400px;
+          }
+        }
+      }
+    }
+  }
+}
+
+
+@media screen and (min-width: 1440px) {
+  main {
+
+    #we-buy {
+      
+      #metal-types-wrap {
+        column-gap: 60px;
+        
+        a {
+
+          h2 {
+            font-size: 50px;
+            line-height: 50px;
+          }
+
+          img {
+            max-width: 500px;
+          }
+        }
+      }
+    }
+  }
+}
