--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,4 +32,4 @@ body {
   margin: 0;
 }
 
-@import './_header', './_home', './_steps', './_footer', './_metals', './_about';
+@import './_header', './_home', './_steps', './_footer', './_metals', './_about', './_contact';
